# StoryGraph

./: README.md
env/: docker-compose.yml
src/backend/: Dockerfile  StoryGraph.sln
src/backend/StoryGraph.Api/: AssemblyReference.cs  Class1.cs  Routes.cs  StoryGraph.Api.csproj
src/backend/StoryGraph.Application/: Class1.cs  ITokenProvider.cs  StoryGraph.Application.csproj
src/backend/StoryGraph.Domain/: Class1.cs  StoryGraph.Domain.csproj
src/backend/StoryGraph.Infrastructure/: ApplicationDbContext.cs  StoryGraph.Infrastructure.csproj
src/client/: Dockerfile  package-lock.json  package.json  tailwind.config.js
src/nlp/ner_model_training/: README.md  pyproject.toml
src/nlp/ner_model_training/src/data_preparation/: data_model.py  dataset.py  embedding.py  ner_data_preparator.py  vectorizer.py
src/nlp/ner_model_training/src/entrypoints/: prepare_data.py  train.py
src/nlp/ner_model_training/src/trainer/: base_trainer.py  trainer.py
src/nlp/ner_model_training/src/trainer/models/: base_classifier.py  bi_lstm.py
src/nlp/ner_model_training/src/utils/: config.py  path.py
src/nlp/sentence_splitter/: Dockerfile  README.md  install_huspacy_model.py  pyproject.toml
src/nlp/sentence_splitter/src/backend/: sentence_splitter_pipeline.py
src/nlp/sentence_splitter/src/service/: sentence_splitter_service.py
src/nlp/token_enricher/: Dockerfile  README.md  pyproject.toml
src/nlp/token_enricher/src/backend/: token_enricher_pipeline.py
src/nlp/token_enricher/src/service/: token_enricher_service.py
src/validation/: Dockerfile  StoryGraph.Validation.sln
(+144 files in other folders)
