[tool.poetry]
name = "sentence_splitter"
version = "0.1.0"
description = "Microservice that splits a document to sentences"
authors = ["Attila Nagy <attila.nagy@meltwater.com>"]

[tool.poetry.dependencies]
python = "^3.8"
huspacy = "0.4.3"
falcon = "^3.1.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
